# Ohtu_miniprojekti

./: .coveragerc  .env  .env.test  .gitignore  .pylintrc  README.md  log.html  output.xml  pyproject.toml  report.html  schema.txt  tasks.py
.github/workflows/: main.yml
data/: lukuvinkit.db
dokumentaatio/: Testikattavuusraportti.md  definitionofdone.md
src/: ReadingtipLibrary.py  config.py  database_interface.py  db_build.py  db_clear.py  db_connection.py  index.py  stub_io.py
src/entities/: blog.py  book.py  lukuvinkki.py  podcast.py  readingtip.py  video.py
src/lukuvinkit/: lukuvinkki.py
src/readingtips/: readingtip.py
src/repositories/: db_build.py  db_clear.py  db_connection.py  db_interface.py
src/services/: readingtip_service.py
src/tests/: blog_test.py  book_test.py  conftest.py  database_test.py  editing.robot  index_temp_test.py  insertion.robot  mark_as_read.robot  podcast_test.py  reading_tips_test.py  readingtip_service_test.py  removing.robot  resource.robot  ui_test.py  video_test.py  viewing.robot
src/ui/: console_io.py  ui.py
