[tool.poetry]
name = "ohtu_miniprojekti"
version = "0.1.0"
description = ""
authors = ["Kosti Vesterinen <kosti.vesterinen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"
coverage = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
